Alignment bottom fix at body

--- a/css/main.scss
+++ b/css/main.scss
@@ -284,6 +284,7 @@ body {
   border-style: solid;
   border-color:rgb(0, 175, 228);
   background-color: #c5c3c3;
+  padding-bottom: 1px;
 
   display: block;
   width: 30vw;
